# docs/swagger.json
@@ -36,7 +36,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/configo.ConfigObject"
+                            "$ref": "#/definitions/configo.UpdateConfigRequest"
                         }
                     }
                 ],
@@ -198,6 +198,17 @@
                 "CONFIG_TYPE_PARENT",
                 "CONFIG_TYPE_LIST"
             ]
+        },
+        "configo.UpdateConfigRequest": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "value": {
+                    "$ref": "#/definitions/configo.ConfigObject"
+                }
+            }
         },
         "configo.configMetadata": {
             "type": "object",
